<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity"
    >

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:textSize="@dimen/titulo"
        android:textStyle="bold"
        android:textColor="@color/letras"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etNombre"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTitulo"
        android:layout_marginTop="16dp"
        android:hint="@string/nombre" />

    <CalendarView
        android:id="@+id/cvNacimiento"
        android:layout_width="244dp"
        android:layout_height="189dp"
        android:layout_below="@id/etNombre"
        android:layout_centerHorizontal="true"
        android:hint="@string/telefono" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etTelefono"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/telefono"
        android:layout_below="@id/cvNacimiento"/>

    <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/email"
            android:layout_below="@id/etTelefono"
            />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etDescripcion"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/descripcion"
        android:layout_below="@id/etEmail"
        />

    <Button
        android:id="@+id/btnSiguiente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etDescripcion"
        android:layout_marginTop="30dp"
        android:text="@string/texto_boton"
        android:theme="@style/MiBotonRaised"
        android:onClick="siguiente"/>


</RelativeLayout>
